kustomize/base/appgw/kustomdeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeinfo
  namespace: test-infra
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: kubeinfo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeinfo-deployment
  namespace: test-infra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubeinfo
  template:
    metadata:
      labels:
        app: kubeinfo
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: CLUSTER_NAME
          value: CaaS
        image: ghcr.io/heymikeey/kube-info/kube-info:latest
        name: kubeinfo-container
        ports:
        - containerPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: apidevno
  name: kubeinfo
  namespace: test-infra
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: api.dev.capego.no
    http:
      paths:
      - backend:
          service:
            name: kubeinfo
            port:
              number: 80
        path: /kubeinfo
        pathType: Prefix
